created a test site

--- a/index.html
+++ b/index.html
@@ -8,7 +8,109 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Leanring Mission</h1>
+    <div class="container">
+      <header id="header">
+        <h1 id="title">Leanring Mision</h1>
+        <nav id="mainNav">
+          <ul>
+            <li class="listItem">Home</li>
+            <li class="listItem">About</li>
+            <li class="listItem">Lessons</li>
+            <li class="listItem">Resources</li>
+            <li class="listItem">Contact</li>
+          </ul>
+        </nav>
+      </header>
+      <main id="main">
+        <article id="mainArticle">
+          <h2 class="subHeading">Part 1</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
+            a vero molestias quaerat provident. Saepe hic ipsum quas ab dolorum,
+            accusantium maiores aut pariatur quae adipisci doloribus deserunt,
+            iure animi cupiditate. Doloribus, fuga et obcaecati cumque itaque
+            reprehenderit veritatis aliquid ipsam voluptates maiores iure ea
+            quasi magnam quis quidem eum?
+          </p>
+          <h2 class="subHeading">Part 2</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
+            a vero molestias quaerat provident. Saepe hic ipsum quas ab dolorum,
+            accusantium maiores aut pariatur quae adipisci doloribus deserunt,
+            iure animi cupiditate. Doloribus, fuga et obcaecati cumque itaque
+            reprehenderit veritatis aliquid ipsam voluptates maiores iure ea
+            quasi magnam quis quidem eum?
+          </p>
+          <h2 class="subHeading">Part 3</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
+            a vero molestias quaerat provident. Saepe hic ipsum quas ab dolorum,
+            accusantium maiores aut pariatur quae adipisci doloribus deserunt,
+            iure animi cupiditate. Doloribus, fuga et obcaecati cumque itaque
+            reprehenderit veritatis aliquid ipsam voluptates maiores iure ea
+            quasi magnam quis quidem eum?
+          </p>
+        </article>
+        <footer>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+            dignissimos quod eum itaque, vitae ad recusandae adipisci nisi
+            blanditiis minima illum odit consectetur! Dolore ut et saepe fugit,
+            sapiente nisi.
+          </p>
+        </footer>
+      </main>
+      <aside id="aside">
+        <article class="asideArticle">
+          <h3>Aside 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ad
+            amet obcaecati rerum eos, dolorum placeat ex mollitia, architecto
+            nisi itaque repellat eaque earum pariatur laudantium voluptates enim
+            harum nam.
+          </p>
+        </article>
+        <article class="asideArticle">
+          <h3>Aside 2</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ad
+            amet obcaecati rerum eos, dolorum placeat ex mollitia, architecto
+            nisi itaque repellat eaque earum pariatur laudantium voluptates enim
+            harum nam.
+          </p>
+        </article>
+        <article class="asideArticle">
+          <h3>Aside 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ad
+            amet obcaecati rerum eos, dolorum placeat ex mollitia, architecto
+            nisi itaque repellat eaque earum pariatur laudantium voluptates enim
+            harum nam.
+          </p>
+        </article>
+      </aside>
+      <footer id="footer">
+        <nav id="footerNav">
+          <ul>
+            <li class="listItem">Home</li>
+            <li class="listItem">About</li>
+            <li class="listItem">Lessons</li>
+            <li class="listItem">Resources</li>
+            <li class="listItem">Contact</li>
+          </ul>
+        </nav>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam cum
+          iure rerum delectus nobis, iusto, dignissimos obcaecati totam pariatur
+          quibusdam velit, expedita magni repellat corporis? A fuga minus ullam
+          optio ipsum deleniti praesentium? Ipsa minima voluptatibus dolore quo
+          quisquam ullam iusto illo repudiandae a cupiditate molestiae autem,
+          obcaecati ex hic!
+        </p>
+      </footer>
+      <div class="colorDiv"></div>
+    </div>
+
     <script src="index.js" />
   </body>
 </html>
